# ReceiptReader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: label.py  ocr.py  train.py
src/data_struct/: output_data_struct.py
